add lesson #08 slides, hw and nb, update lesson #07 nb

--- a/lesson-07/class_07.ipynb
+++ b/lesson-07/class_07.ipynb
@@ -1606,6 +1606,445 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c1d1c8f6-3a9e-41a2-b4d5-4230c819aaea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import time\n",
+    "import aiohttp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "41a1cfc8-ece6-48d6-884c-41a71f824df2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.238487005233765\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL = \"https://docs.python.org/3/whatsnew/3.12.html\"\n",
+    "URLS = [URL] * 40\n",
+    "N_CONNS = 2\n",
+    "\n",
+    "\n",
+    "async def fetch_url(url, sem):\n",
+    "    async with sem:\n",
+    "        async with aiohttp.ClientSession() as session:\n",
+    "            async with session.get(url) as resp:\n",
+    "                # print(resp.status)\n",
+    "                data = await resp.text()\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "async def fetch_batch_urls(urls, n_connections):\n",
+    "    sem = asyncio.Semaphore(n_connections)\n",
+    "    tasks = []\n",
+    "    \n",
+    "    for url in urls:\n",
+    "        tasks.append(fetch_url(url, sem))\n",
+    "\n",
+    "    await asyncio.gather(*tasks)\n",
+    "\n",
+    "\n",
+    "async def run():\n",
+    "    t1 = time.time()\n",
+    "    data = await fetch_batch_urls(URLS, N_CONNS)\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43c24e5-a555-4bec-9e1c-9a8c4e3e2f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d90c70b4-f8a2-4397-9e89-fe4766b4508a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started worker fetch_worker_0\n",
+      "started worker fetch_worker_1\n",
+      "started worker fetch_worker_2\n",
+      "started worker fetch_worker_3\n",
+      "started worker fetch_worker_4\n",
+      "finished worker fetch_worker_4\n",
+      "finished worker fetch_worker_0\n",
+      "finished worker fetch_worker_3\n",
+      "finished worker fetch_worker_1\n",
+      "finished worker fetch_worker_2\n",
+      "2.276322841644287\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL = \"https://docs.python.org/3/whatsnew/3.12.html\"\n",
+    "URLS = [URL] * 40\n",
+    "N_WORKERS = 5\n",
+    "\n",
+    "\n",
+    "async def fetch_url(url):\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.get(url) as resp:\n",
+    "            # print(resp.status)\n",
+    "            data = await resp.text()\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "async def fetch_worker(que, name):\n",
+    "    print(\"started worker\", name)\n",
+    "\n",
+    "    while True:\n",
+    "        url = await que.get()\n",
+    "\n",
+    "        if url is None:\n",
+    "            await que.put(url)\n",
+    "            break\n",
+    "\n",
+    "        try:\n",
+    "            res = await fetch_url(url)\n",
+    "        except Exception as err:\n",
+    "            print(\"error\", err)\n",
+    "\n",
+    "    print(\"finished worker\", name)\n",
+    "\n",
+    "\n",
+    "async def fetch_batch_urls(urls, n_workers):\n",
+    "    workers = []\n",
+    "    que = asyncio.Queue()\n",
+    "    for url in urls:\n",
+    "        await que.put(url)\n",
+    "    await que.put(None)\n",
+    "    \n",
+    "    for i in range(n_workers):\n",
+    "        workers.append(fetch_worker(que, f\"fetch_worker_{i}\"))\n",
+    "\n",
+    "    await asyncio.gather(*workers)\n",
+    "\n",
+    "\n",
+    "async def run():\n",
+    "    t1 = time.time()\n",
+    "    data = await fetch_batch_urls(URLS, N_WORKERS)\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c8930fb-11f5-4849-99c1-f9250237d692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started worker fetch_worker_0\n",
+      "started worker fetch_worker_1\n",
+      "started worker fetch_worker_2\n",
+      "started worker fetch_worker_3\n",
+      "started worker fetch_worker_4\n",
+      "finished que\n",
+      "2.2531871795654297\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL = \"https://docs.python.org/3/whatsnew/3.12.html\"\n",
+    "URLS = [URL] * 40\n",
+    "N_WORKERS = 5\n",
+    "\n",
+    "\n",
+    "async def fetch_url(url):\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.get(url) as resp:\n",
+    "            # print(resp.status)\n",
+    "            data = await resp.text()\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "async def fetch_worker(que, name):\n",
+    "    print(\"started worker\", name)\n",
+    "\n",
+    "    while True:\n",
+    "        url = await que.get()\n",
+    "\n",
+    "        try:\n",
+    "            res = await fetch_url(url)\n",
+    "        except Exception as err:\n",
+    "            print(\"error\", err)\n",
+    "        finally:\n",
+    "            que.task_done()\n",
+    "\n",
+    "    print(\"finished worker\", name)\n",
+    "\n",
+    "\n",
+    "async def fetch_batch_urls(urls, n_workers):\n",
+    "    workers = []\n",
+    "    que = asyncio.Queue()\n",
+    "    for url in urls:\n",
+    "        await que.put(url)\n",
+    "    \n",
+    "    for i in range(n_workers):\n",
+    "        workers.append(\n",
+    "            asyncio.create_task(\n",
+    "                fetch_worker(que, f\"fetch_worker_{i}\")\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    await que.join()\n",
+    "    print(\"finished que\")\n",
+    "\n",
+    "    for wrk in workers:\n",
+    "        wrk.cancel()\n",
+    "\n",
+    "\n",
+    "async def run():\n",
+    "    t1 = time.time()\n",
+    "    data = await fetch_batch_urls(URLS, N_WORKERS)\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "944f985b-b0db-46b8-a0d1-67ead6c89ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb63bef0-a486-4c85-811b-0419da99d5c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bb0c8ce7-dc18-4a06-b175-b4fe9a33d1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('fetch_task_3', 200) 4.00543212890625e-05 0.249345064163208\n",
+      "('fetch_task_2', 200) 0.24948620796203613 0.24948787689208984\n",
+      "result ('fetch_task_2', 200)\n",
+      "('fetch_task_1', 200) 0.2495272159576416 0.2655298709869385\n",
+      "('fetch_task_4', 200) 0.2655770778656006 0.2936420440673828\n",
+      "result ('fetch_task_4', 200)\n",
+      "('fetch_task_0', 200) 0.2937171459197998 0.2961540222167969\n",
+      "result ('fetch_task_0', 200)\n",
+      "0.29678797721862793\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL = \"https://docs.python.org/3/whatsnew/3.12.html\"\n",
+    "URLS = [URL] * 5\n",
+    "\n",
+    "\n",
+    "async def fetch_url(url, session, name):\n",
+    "    async with session.get(url) as resp:\n",
+    "        data = await resp.text()\n",
+    "        return (name, resp.status)\n",
+    "\n",
+    "\n",
+    "async def gen_fetch_urls(urls, session):\n",
+    "    tasks = []\n",
+    "    for i, url in enumerate(urls):\n",
+    "        tasks.append(\n",
+    "            asyncio.create_task(\n",
+    "                fetch_url(url, session, f\"fetch_task_{i}\")\n",
+    "            )\n",
+    "        )\n",
+    "    t_start = time.time()\n",
+    "\n",
+    "    for task in asyncio.as_completed(tasks):\n",
+    "        t_task = time.time()\n",
+    "        result = await task\n",
+    "        t_end = time.time()\n",
+    "        print(result, t_task - t_start, t_end - t_start)\n",
+    "        \n",
+    "        num = int(result[0].rsplit(\"_\", 1)[-1])\n",
+    "        if num % 2 == 0:\n",
+    "            yield result\n",
+    "\n",
+    "\n",
+    "async def fetch_batch_urls(urls):\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async for result in gen_fetch_urls(urls, session):\n",
+    "            print(\"result\", result)\n",
+    "\n",
+    "\n",
+    "async def run():\n",
+    "    t1 = time.time()\n",
+    "    data = await fetch_batch_urls(URLS)\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b35d870c-b96b-4994-8cfa-9874995d262f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "493d35a0-00ea-4aba-9f8e-e691abdd544f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e84b55e-996e-4afb-b4ff-1df01e84ee34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "745f534e-b2b8-4125-b0fc-5d64dbda460f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=5\n",
+      "finish blocking api n=5\n",
+      "start non-blocking api n=5\n",
+      "finish non-blocking api n=5\n",
+      "total_time 10.004767894744873\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    # await asyncio.to_thread(time.sleep, n)\n",
+    "    time.sleep(n)\n",
+    "    \n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def run(n):\n",
+    "    t1 = time.time()\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "    t2 = time.time()\n",
+    "    print(\"total_time\", t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "279c9b3d-a46f-457a-8cb2-03e1ac37c9c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=5\n",
+      "start non-blocking api n=5\n",
+      "finish non-blocking api n=5\n",
+      "finish blocking api n=5\n",
+      "total_time 5.005413770675659\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.to_thread(time.sleep, n)\n",
+    "    #time.sleep(n)\n",
+    "    \n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def run(n):\n",
+    "    t1 = time.time()\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "    t2 = time.time()\n",
+    "    print(\"total_time\", t2 - t1)\n",
+    "\n",
+    "\n",
+    "await run(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46c2edd6-5f45-4f40-8bbb-94c5572b13c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
